--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "tailwindcss": "^2.2.4"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.3",
         "admin-lte": "^3.1.0"
     }
 }
