--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
-    "/js/handlers/devices.js": "/js/handlers/devices.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/handlers/devices.js": "/js/handlers/devices.js"
 }
