--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=86974e6e209875e8dd05",
-    "/css/devices.css": "/css/devices.css?id=1aafe024c09484a8f00a",
-    "/css/app.css": "/css/app.css?id=c5813ca211ea8e88bd4b",
-    "/js/handlers/devices.js": "/js/handlers/devices.js?id=80f1a87f4fc0246b9d7e"
+    "/js/app.js": "/js/app.js",
+    "/css/devices.css": "/css/devices.css",
+    "/css/app.css": "/css/app.css",
+    "/js/scenarios/devices.js": "/js/scenarios/devices.js"
 }
