ADD: Page pure text is replaced with translation string function. Created Tab component. UPD: A welcome page has site description and login form. Updated input and button components.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/welcome.css": "/css/welcome.css",
     "/css/devices.css": "/css/devices.css",
     "/css/app.css": "/css/app.css",
     "/js/scenarios/devices.js": "/js/scenarios/devices.js"
